--- a/playerEpisode.html
+++ b/playerEpisode.html
@@ -409,12 +409,16 @@ fetch("partials/navbar.html")
     document.getElementById("navbar").innerHTML = html;
   });
 
+document.addEventListener("DOMContentLoaded", () => {
 
   fetch("partials/footer.html")
-  .then(res => res.text())
-  .then(html => {
-    document.getElementById("footer").innerHTML = html;
-  });
+    .then(res => res.text())
+    .then(html => {
+      const footer = document.getElementById("footer");
+      if (footer) footer.innerHTML = html;
+    });
+
+});
 
 </script>
 
