--- a/search.html
+++ b/search.html
@@ -16,11 +16,16 @@
   <link rel="stylesheet" href="css/footer.css">
   <script>
 
+  document.addEventListener("DOMContentLoaded", () => {
+
   fetch("partials/footer.html")
-  .then(res => res.text())
-  .then(html => {
-    document.getElementById("footer").innerHTML = html;
-  });
+    .then(res => res.text())
+    .then(html => {
+      const footer = document.getElementById("footer");
+      if (footer) footer.innerHTML = html;
+    });
+
+});
 </script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
