--- a/archivesPage.html
+++ b/archivesPage.html
@@ -167,7 +167,7 @@ document.addEventListener("DOMContentLoaded", () => {
     </div>
 </div>
 
-<h1 class="text-right" style="margin-right:60px; font-family: 'Assistant', sans-serif; font-size: 36px; font-weight: 700; color: #0B3D91;">גל"צ מרתונים</h1>
+<!-- <h1 class="text-right" style="margin-right:60px; font-family: 'Assistant', sans-serif; font-size: 36px; font-weight: 700; color: #0B3D91;">גל"צ מרתונים</h1> -->
 
 
 
@@ -512,7 +512,7 @@ hr {
 
 </style>
 
-<div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-rtl" dir="rtl">
+<!-- <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-rtl" dir="rtl">
     <div class="swiper-wrapper" id="swiper-wrapper-17c4b3fbeaa8ccad" aria-live="polite">
                     <div class="swiper-slide swiper-slide-active" role="group" aria-label="1 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-גלי-עטרי/" title="מרתון גלי עטרי">
@@ -585,7 +585,7 @@ hr {
     <!-- החיצים -->
     <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-17c4b3fbeaa8ccad" aria-disabled="false"><svg class="swiper-navigation-icon" width="11" height="20" viewBox="0 0 11 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.38296 20.0762C0.111788 19.805 0.111788 19.3654 0.38296 19.0942L9.19758 10.2796L0.38296 1.46497C0.111788 1.19379 0.111788 0.754138 0.38296 0.482966C0.654131 0.211794 1.09379 0.211794 1.36496 0.482966L10.4341 9.55214C10.8359 9.9539 10.8359 10.6053 10.4341 11.007L1.36496 20.0762C1.09379 20.3474 0.654131 20.3474 0.38296 20.0762Z" fill="currentColor"></path></svg></div>
     <div class="swiper-button-prev swiper-button-disabled" tabindex="-1" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-17c4b3fbeaa8ccad" aria-disabled="true"><svg class="swiper-navigation-icon" width="11" height="20" viewBox="0 0 11 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.38296 20.0762C0.111788 19.805 0.111788 19.3654 0.38296 19.0942L9.19758 10.2796L0.38296 1.46497C0.111788 1.19379 0.111788 0.754138 0.38296 0.482966C0.654131 0.211794 1.09379 0.211794 1.36496 0.482966L10.4341 9.55214C10.8359 9.9539 10.8359 10.6053 10.4341 11.007L1.36496 20.0762C1.09379 20.3474 0.654131 20.3474 0.38296 20.0762Z" fill="currentColor"></path></svg></div>
-<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
+<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div> -->
 
 <script>
 const swiper = new Swiper(".mySwiper", {
@@ -743,7 +743,7 @@ const swiper2 = new Swiper(".mySwiper2", {
                     </a>
                 </div>
                 <div class="program-card text-center">
-                    <a href="/תכניות/ממי-קיבלתי-את-התורה/">
+                    <a href="program.html?id=mmi-kibalti-at-hatora">
                         <img src="media/2-6.jpg" alt="ממי קיבלתי את התורה?">
                         <h4>ממי קיבלתי את התורה?</h4>
                     </a>
