--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 <iframe
   width="100%"
   height="315"
-  src="https://www.youtube.com/embed/5U_KuBK5LEY?si=ZgoyFoQD4d89bwkU"
+  src="https://www.youtube.com/embed/zizORvxZu5s?si=NQj_1w-9oqYu7Oy_"
   allowfullscreen
   class="rounded shadow-sm">
 </iframe>      </div>
@@ -365,7 +365,7 @@
 
 
 
-  <h1 class="text-center page-title cards-title" style="direction: rtl; unicode-bidi: plaintext;">מומלצים וחדשים✨<i class="bi bi-stars" style="color: #f5d643;"></i></h1>
+  <h1 class="text-center page-title cards-title" style="direction: rtl; unicode-bidi: plaintext;">מומלצים וחדשים✨</h1>
   
 <div class="container-fluid px-4 mt-4 mb-4 cards">
   <div class="row gx-3">
@@ -401,7 +401,7 @@
   </div>
 
   <div class="col-12 col-sm-6 col-md-3">
-    <a href="https://www.youtube.com/watch?v=xVFgoKSrhOQ" class="episode-card-flat">
+    <a href="https://www.youtube.com/watch?v=xVFgoKSrhOQ" target="_blank" class="episode-card-flat">
       
       <img src="media/טאב הוריזונטל טו בשבט.jpg" alt="פרק 1" class="episode-img" style="object-fit: fill !important;">
 
@@ -511,6 +511,15 @@
   .cards-title {
     font-size: 2.9rem;
   }
+
+  .episode-img {
+  width: calc(100% + 20px); /* ההרחבה העדינה */
+  margin-right: -12px;
+  margin-left: -12px;
+  height: 270px;
+  object-fit: cover;
+  overflow: hidden;
+}
 
   
 }
@@ -762,7 +771,7 @@ iframe {
         כומתה בקפיצות? הצטרפו, הולך להיות אדום!
       </p>
       <div class="a-div">
-        <a class="hero-cta" href="/תכניות/מסע-כומתות/">לצפייה בכל הפרקים</a>
+        <a class="hero-cta" href="programsSeries.html?id=masa-comtot">לצפייה בכל הפרקים</a>
       </div>
     </div>
 
@@ -986,7 +995,7 @@ iframe {
         מהפעם הראשונה שהקשיבו לו אי שם בילדות ואיך המוסיקה שלו מלווה אותן לאורך השנים
       </p>
       <div class="a-div-alt">
-        <a class="hero-cta-alt" href="/תכניות/ממי-קיבלתי-את-התורה/">להאזנה לפרקים נוספים</a>
+        <a class="hero-cta-alt" href="program.html?id=mmi-kibalti-at-hatora">להאזנה לפרקים נוספים</a>
       </div>
     </div>
 
