--- a/sdarotReshetPage.html
+++ b/sdarotReshetPage.html
@@ -146,7 +146,7 @@
 <div class="col-12 col-sm-6 col-md-3">
     <a href="episodeVideo.html?series=masa-comtot&episode=ep1" class="episode-card-flat">
       
-      <img src="media/ep4.jpg" alt="פרק 1" class="episode-img" >
+      <img src="media/טאב-חטיבת-כרמלי.png" alt="פרק 1" class="episode-img" >
 
       <div class="episode-body">
         <h3 class="episode-title text-center">
