--- a/archivesPage.html
+++ b/archivesPage.html
@@ -48,7 +48,7 @@ document.addEventListener("DOMContentLoaded", () => {
       <div class="nav-center nav-links">
         <a class="nav-link" href="musicPage.html">מוזיקה</a>
         <a class="nav-link" href="podcastsPage.html">הסכתים</a>
-        <a class="nav-link" href="sadarotReshet.html">סדרות רשת</a>
+        <a class="nav-link" href="sdarotReshetPage.html">סדרות רשת</a>
         <a class="nav-link" href="culturePage.html">תרבות ופנאי</a>
         <a class="nav-link" href="kidsPage.html">ילדים ונוער</a>
         <a class="nav-link" href="archivesPage.html">ארכיון</a>
@@ -76,7 +76,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div id="mobileMenu" class="mobile-menu">
     <a href="musicPage.html" data-close="">מוזיקה</a>
     <a href="podcastsPage.html" data-close="">הסכתים</a>
-    <a href="sadarotReshet.html" data-close="">סדרות רשת</a>
+    <a href="sdarotReshetPage.html" data-close="">סדרות רשת</a>
     <a href="culturePage.html" data-close="">תרבות ופנאי</a>
     <a href="kidsPage.html" data-close="">ילדים ונוער</a>
     <a href="archivesPage.html" data-close="">ארכיון</a>
@@ -133,14 +133,14 @@ document.addEventListener("DOMContentLoaded", () => {
 
     <!-- שורה ראשונה: שני מלבנים גדולים -->
     <div class="grid row1">
-            <a href="/תכניות/יום-הולדת-70-לדני-בסן/" class="card">
+            <a href="/program.html?id=mati-caspi" class="card">
                 <div class="card large">
-                    <img src="media\בתןך הפודקאסט פי 2 (2).png" alt="img">
+                    <img src="media/mati.png" alt="img">
                  </div>
             </a>
-            <a href="/תכניות/יום-הולדת-75-לדני-סנדרסון/" class="card">
+            <a href="/web1" class="card">
                 <div class="card large">
-                    <img src="media\בתןך-הפודקאסט-פי-2-1.jpg" alt="img">
+                    <img src="media/sos.jpg" alt="img">
                  </div>
             </a>
     </div>
@@ -148,26 +148,26 @@ document.addEventListener("DOMContentLoaded", () => {
 
     <!-- שורה שנייה: שלושה מלבנים קטנים -->
     <div class="grid row2">
-            <a href="/תכניות/מרתון-אריאל-זילבר-שבועות-1989/" class="card">
+            <a href="/web1" class="card">
                 <div class="card small">
-                    <img src="media/תיאטרון.png" alt="img">
+                    <img src="media/gabi.png" alt="img">
                 </div>
             </a>
-            <a href="/תכניות/האדם-השלישי/" class="card">
+            <a href="/web1" class="card">
                 <div class="card small">
-                    <img src="media\יהודית רביץ בתוך.jpg" alt="img">
+                    <img src="media/בתןך הפודקאסט פי 2 (2).png" alt="img">
                 </div>
             </a>
-            <a href="/תכניות/30-שנה-לציון-ללכתו-של-סשה-ארגוב/" class="card">
+            <a href="/web1" class="card">
                 <div class="card small">
-                    <img src="media/klep.jpg" alt="img">
+                    <img src="media/IMG_3737.png" alt="img">
                 </div>
             </a>
 
     </div>
 </div>
 
-<!-- <h1 class="text-right" style="margin-right:60px; font-family: 'Assistant', sans-serif; font-size: 36px; font-weight: 700; color: #0B3D91;">גל"צ מרתונים</h1> -->
+<h1 class="text-right" style="margin-right:60px; font-family: 'Assistant', sans-serif; font-size: 36px; font-weight: 700; color: #0B3D91;">גל"צ מרתונים</h1>
 
 
 
@@ -512,47 +512,47 @@ hr {
 
 </style>
 
-<!-- <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-rtl" dir="rtl">
+<div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-rtl" dir="rtl">
     <div class="swiper-wrapper" id="swiper-wrapper-17c4b3fbeaa8ccad" aria-live="polite">
                     <div class="swiper-slide swiper-slide-active" role="group" aria-label="1 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-גלי-עטרי/" title="מרתון גלי עטרי">
-                            <img src="media\יהודית רביץ בתוך.jpg" alt="מרתון גלי עטרי">
+                            <img src="media/gali.jpg" alt="מרתון גלי עטרי">
                             <h3>מרתון גלי עטרי</h3>
                         </a>
                     </div>
                     <div class="swiper-slide swiper-slide-next" role="group" aria-label="2 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-מאיר-בנאי/" title="מרתון מאיר בנאי">
-                            <img src="media\יהודית רביץ בתוך.jpg" alt="מרתון מאיר בנאי">
+                            <img src="media/banai.jpg" alt="מרתון מאיר בנאי">
                             <h3>מרתון מאיר בנאי</h3>
                         </a>
                     </div>
                     <div class="swiper-slide" role="group" aria-label="3 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-עפרה-חזה/" title="מרתון עפרה חזה">
-                            <img src="media/zhrbfzq0/בתןך-הפודקאסט-פי-2-1.jpg" alt="מרתון עפרה חזה">
+                            <img src="media/ofra.jpg" alt="מרתון עפרה חזה">
                             <h3>מרתון עפרה חזה</h3>
                         </a>
                     </div>
                     <div class="swiper-slide" role="group" aria-label="4 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-שלום-חנוך/" title="מרתון שלום חנוך">
-                            <img src="media/4dma00d3/בתןך-הפודקאסט-פי-2-2.jpg" alt="מרתון שלום חנוך">
+                            <img src="media/hanu.jpg" alt="מרתון שלום חנוך">
                             <h3>מרתון שלום חנוך</h3>
                         </a>
                     </div>
                     <div class="swiper-slide" role="group" aria-label="5 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-צביקה-פיק/" title="מרתון צביקה פיק">
-                            <img src="media/jglftpn0/בתןך-הפודקאסט-פי-2-4.jpg" alt="מרתון צביקה פיק">
+                            <img src="media/pik.jpg" alt="מרתון צביקה פיק">
                             <h3>מרתון צביקה פיק</h3>
                         </a>
                     </div>
                     <div class="swiper-slide" role="group" aria-label="6 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-חוה-אלברשטיין/" title="מרתון חוה אלברשטיין">
-                            <img src="media/rngf2xbd/באנר-חדש-חוה.jpg" alt="מרתון חוה אלברשטיין">
+                            <img src="media/hava.jpg" alt="מרתון חוה אלברשטיין">
                             <h3>מרתון חוה אלברשטיין</h3>
                         </a>
                     </div>
                     <div class="swiper-slide" role="group" aria-label="7 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-עוזי-חיטמן/" title="מרתון עוזי חיטמן">
-                            <img src="media/51nbfjx3/בתןך-הפודקאסט-פי-2-5.jpg" alt="מרתון עוזי חיטמן">
+                            <img src="media/mai.jpg" alt="מרתון עוזי חיטמן">
                             <h3>מרתון עוזי חיטמן</h3>
                         </a>
                     </div>
@@ -564,19 +564,19 @@ hr {
                     </div>
                     <div class="swiper-slide" role="group" aria-label="9 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-יהודית-רביץ/" title="מרתון יהודית רביץ">
-                            <img src="media/24hmuwoo/בתןך-הפודקאסט-פי-2-7.jpg" alt="מרתון יהודית רביץ">
+                            <img src="media/יהודית רביץ בתוך.jpg" alt="מרתון יהודית רביץ">
                             <h3>מרתון יהודית רביץ</h3>
                         </a>
                     </div>
                     <div class="swiper-slide" role="group" aria-label="10 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-גידי-גוב/" title="מרתון גידי גוב">
-                            <img src="media/hvbhfknf/בתןך-הפודקאסט-פי-2-8.jpg" alt="מרתון גידי גוב">
+                            <img src="media/gidi.jpg" alt="מרתון גידי גוב">
                             <h3>מרתון גידי גוב</h3>
                         </a>
                     </div>
                     <div class="swiper-slide" role="group" aria-label="11 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-יהודה-פוליקר/" title="מרתון יהודה פוליקר">
-                            <img src="media/i4tm5v4e/בתןך-הפודקאסט-פי-2-9.jpg" alt="מרתון יהודה פוליקר">
+                            <img src="media/yud.jpg" alt="מרתון יהודה פוליקר">
                             <h3>מרתון יהודה פוליקר</h3>
                         </a>
                     </div>
@@ -585,7 +585,7 @@ hr {
     <!-- החיצים -->
     <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-17c4b3fbeaa8ccad" aria-disabled="false"><svg class="swiper-navigation-icon" width="11" height="20" viewBox="0 0 11 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.38296 20.0762C0.111788 19.805 0.111788 19.3654 0.38296 19.0942L9.19758 10.2796L0.38296 1.46497C0.111788 1.19379 0.111788 0.754138 0.38296 0.482966C0.654131 0.211794 1.09379 0.211794 1.36496 0.482966L10.4341 9.55214C10.8359 9.9539 10.8359 10.6053 10.4341 11.007L1.36496 20.0762C1.09379 20.3474 0.654131 20.3474 0.38296 20.0762Z" fill="currentColor"></path></svg></div>
     <div class="swiper-button-prev swiper-button-disabled" tabindex="-1" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-17c4b3fbeaa8ccad" aria-disabled="true"><svg class="swiper-navigation-icon" width="11" height="20" viewBox="0 0 11 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.38296 20.0762C0.111788 19.805 0.111788 19.3654 0.38296 19.0942L9.19758 10.2796L0.38296 1.46497C0.111788 1.19379 0.111788 0.754138 0.38296 0.482966C0.654131 0.211794 1.09379 0.211794 1.36496 0.482966L10.4341 9.55214C10.8359 9.9539 10.8359 10.6053 10.4341 11.007L1.36496 20.0762C1.09379 20.3474 0.654131 20.3474 0.38296 20.0762Z" fill="currentColor"></path></svg></div>
-<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div> -->
+<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div> 
 
 <script>
 const swiper = new Swiper(".mySwiper", {
