--- a/episodeVideo.html
+++ b/episodeVideo.html
@@ -36,7 +36,7 @@
       <div class="nav-center nav-links">
         <a class="nav-link" href="musicPage.html">מוזיקה</a>
         <a class="nav-link" href="podcastsPage.html">הסכתים</a>
-        <a class="nav-link" href="sadarotReshet.html">סדרות רשת</a>
+        <a class="nav-link" href="sdarotReshetPage.html">סדרות רשת</a>
         <a class="nav-link" href="culturePage.html">תרבות ופנאי</a>
         <a class="nav-link" href="kidsPage.html">ילדים ונוער</a>
         <a class="nav-link" href="archivesPage.html">ארכיון</a>
@@ -64,7 +64,7 @@
   <div id="mobileMenu" class="mobile-menu">
     <a href="musicPage.html" data-close="">מוזיקה</a>
     <a href="podcastsPage.html" data-close="">הסכתים</a>
-    <a href="sadarotReshet.html" data-close="">סדרות רשת</a>
+    <a href="sdarotReshetPage.html" data-close="">סדרות רשת</a>
     <a href="culturePage.html" data-close="">תרבות ופנאי</a>
     <a href="kidsPage.html" data-close="">ילדים ונוער</a>
     <a href="archivesPage.html" data-close="">ארכיון</a>
@@ -100,6 +100,8 @@
 	
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<a id="back-link" class="program-link back-to-program btn" href="program.html?id=melechblayizerhaim">חזרה לעמוד התוכנית</a>
 
 <section class="episode-section">
   <div class="video-container" id="videoContainer">
