--- a/archivesPage.html
+++ b/archivesPage.html
@@ -634,7 +634,7 @@ const swiper = new Swiper(".mySwiper", {
     <div class="swiper-wrapper" id="swiper-wrapper-a1035f632c71d2c73" aria-live="polite">
                     <div class="swiper-slide swiper-slide-active" role="group" aria-label="1 / 6" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/ארכיון-גלצ-צביקה-פיק-זל/" title="ארכיון גל&quot;צ: צביקה פיק ז&quot;ל">
-                            <img src="/media/2-9.jpg" alt="ארכיון גל&quot;צ: צביקה פיק ז&quot;ל">
+                            <img src="media/2-9.jpg" alt="ארכיון גל&quot;צ: צביקה פיק ז&quot;ל">
                             <h3>ארכיון גל"צ: צביקה פיק ז"ל</h3>
                         </a>
                     </div>
