--- a/podcastsPage.html
+++ b/podcastsPage.html
@@ -190,7 +190,7 @@
                 </a>
             </div>
             <div class="program-card">
-                <a href="/תכניות/דור-הביט/">
+                <a href="program.html?id=dor-bit">
                     <img src="media/עותק-של-image00002.png" alt="דור הביט">
                     <h4 class="text-center">דור הביט</h4>
                 </a>
@@ -202,7 +202,7 @@
                 </a>
             </div>
             <div class="program-card">
-                <a href="/תכניות/הסכת-ארצישראלי-מצוי/">
+                <a href="program.html?id=artsisraeli-metzuy">
                     <img src="media/archi.png" alt="הסכת ארצישראלי מצוי">
                     <h4 class="text-center">הסכת ארצישראלי מצוי</h4>
                 </a>
@@ -328,7 +328,7 @@
 
     @media (max-width: 992px) {
         .programs-grid {
-            grid-template-columns: repeat(2, 1fr) !important;
+            grid-template-columns: repeat(1, 1fr) !important;
         }
     }
 
@@ -338,7 +338,6 @@
             grid-template-columns: repeat(2, 1fr);
             gap: 20px;
             padding: 10px;
-            aspect-ratio: 1 / 1;   /* ריבוע אחיד */
               min-width: 48px;
 
 
