--- a/archivesPage.html
+++ b/archivesPage.html
@@ -133,12 +133,12 @@ document.addEventListener("DOMContentLoaded", () => {
 
     <!-- שורה ראשונה: שני מלבנים גדולים -->
     <div class="grid row1">
-            <a href="/program.html?id=mati-caspi" class="card">
+            <a href="program.html?id=mati-caspi" class="card">
                 <div class="card large">
                     <img src="media/mati.png" alt="img">
                  </div>
             </a>
-            <a href="/web1" class="card">
+            <a href="web1" class="card">
                 <div class="card large">
                     <img src="media/sos.jpg" alt="img">
                  </div>
