--- a/podcastsPage.html
+++ b/podcastsPage.html
@@ -154,7 +154,7 @@
                 </a>
             </div>
             <div class="program-card">
-                <a href="/תכניות/הבית-של-יעל/">
+                <a href="program.html?id=habit-shel-yael">
                     <img src="media/יעל.png" alt="הבית של יעל">
                     <h4 class="text-center">הבית של יעל</h4>
                 </a>
@@ -178,7 +178,7 @@
                 </a>
             </div>
             <div class="program-card">
-                <a href="/תכניות/standup4israel/">
+                <a href="program.html?id=stand-up4Israel">
                     <img src="media/2.png" alt="StandUp4Israel">
                     <h4 class="text-center">StandUp4Israel</h4>
                 </a>
