--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
             <p class="program-description">"פודקאסט על מוזיקה וטכנולוגיה" מיועד לכל מי שסקרן להבין את מהפכת המוזיקה והתרבות, ולהכיר כיצד היא משקפת את הקצב המשתנה של העולם הדיגיטלי. יחד נצלול לעומק המפגש בין מוסיקה לטכנולוגיה, נחקור כיצד הטכנולוגיה משנה את פני התעשייה, מהן ההזדמנויות ומהם האתגרים, ונשמע סיפורים אישיים מיוצרות, יזמים ואנשי טכנולוגיה שחיים את השטח.</p>
           </div>
           <div class="col-6 col-md-4 col-lg-3 mb-5">
-            <a href="/תכניות/הבית-של-יעל/" class="program-link program-card-image">
+            <a href="program.html?id=habit-shel-yael" class="program-link program-card-image">
               <img src="media/יעל.png" alt="הבית של יעל" class="program-image">
             </a>
             <h6 class="program-title mt-2" title="הבית של יעל">הבית של יעל</h6>
@@ -562,7 +562,7 @@
             <p class="program-description">שלושה פרקים. שלוש נשים. ושאלה אחת- מה מחזיק אותנו יחד דווקא כשהכול מתפרק? מיה מורנו ולילך גדול, ששתיהן התמודדו עם שכול אישי, יוצאות למסע מרגש ואינטימי בעקבות האנשים שמרכיבים את הפנים של התקווה, הכוח והחמלה הישראלית.</p>
           </div>
           <div class="col-6 col-md-4 col-lg-3 mb-5">
-            <a href="/תכניות/standup4israel/" class="program-link program-card-image">
+            <a href="program.html?id=stand-up4Israel" class="program-link program-card-image">
               <img src="media/2.png" alt="עם שחר חסון ויוחאי ספונדר StandUp4Israel " class="program-image">
             </a>
             <h6 class="program-title mt-2" title="עם שחר חסון ויוחאי ספונדר StandUp4Israel ">עם שחר חסון ויוחאי ספונדר StandUp4Israel </h6>
